--- a/index.html
+++ b/index.html
@@ -79,91 +79,89 @@
         </div>
       </nav>
       <!-- Main Body -->
-      <div id="banner" class="cover">
+      <div id="banner">
         <div class="jumbotron jumbotron-fluid">
           <div class="row container">
             <div class="col-md-7">
-              <h2 class="font-weight-bold display-4">Elevation City</h2>
+              <h1 class="font-weight-bold display-4">Elevation City</h1>
               <h3 class="lead font-weight-bold">To know Christ Jesus and make Him known to all...</h3>
               <p class="pt-4"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
             </div>
           </div>
         </div>
       </div>
-      <div class="cover mt-0">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 py-2" id="profile">
-              <div class="titles">
-                <h4>Meet the Executive Director</h4>
-              </div>
-              <div class="py-4 text-center">
-                <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%"  width="220" alt="img of Rev.">
-                <p class="font-weight-bold lead pt-2 pb-1">Very Rev. Dennis J. Boadu</p>
-                <button class="btn btn-md btn-info" type="button" name="button" data-toggle="modal" data-target="#exe-profile">Read more</button>
-              </div>
-              <div class="modal" id="exe-profile" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-scrollable" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="modalCenteredLabel">Profile of Rev. Dennis J. Boadu</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <p>
-                        Rev. Dennis J. Boadu, (Executive Director).  <br><br>
-                        He is currently the Koforidua Diocesan Synod Secretary of
-                        the Methodist Church Ghana, the Superintendent Minister of
-                        the Nsukwao Circuit, Koforidua, Member of the National Council,
-                        Scripture Union Ghana (S.U.), The Eastern Regional Chairman
-                        of the Scripture Union (S.U.) Ghana and a Jerusalem Pilgrim (JP) <br><br>
-                        As an Executive Director, is responsible for providing spiritual
-                        oversight of the entire operations of the “Elevation City’.
-                        The primary duties are as follows. <br>
-                        To prepare and keep an up-to-date
-                        report on all the spiritual undertakings of the ‘Elevation City’, <br>
-                        Offer direction as to the use of the facilities of 'Elevation City'. <br>
-                        Be well versed in new trends in Christian Education and worship. <br><br>
-                        He stands for fairness and justice and also believes in the Bible
-                        is a guide in our daily lives.
-                        Very Rev. Dennis Joseph Boadu’s Christian journey has been very
-                        eventful. He served as a chaplain for the Mfantsipim School
-                        (first Secondary School in 	Ghana) for ten years (1998-2008).
-                        A missionary to Italy, working with the Waldensian Evangelical
-                        Church in Rome and Bologna/Modena for five years (2009-2014).
-                        Synod Secretary for the Methodist Church from (2019-2023)
-                      </p>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
-                    </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 py-2" id="profile">
+            <div class="titles">
+              <h4>Meet the Executive Director</h4>
+            </div>
+            <div class="py-4 text-center">
+              <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%"  width="220" alt="img of Rev.">
+              <p class="font-weight-bold lead pt-2 pb-1">Very Rev. Dennis J. Boadu</p>
+              <button class="btn btn-md btn-info" type="button" name="button" data-toggle="modal" data-target="#exe-profile">Read more</button>
+            </div>
+            <div class="modal" id="exe-profile" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-scrollable" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="modalCenteredLabel">Profile of Rev. Dennis J. Boadu</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <p>
+                      Rev. Dennis J. Boadu, (Executive Director).  <br><br>
+                      He is currently the Koforidua Diocesan Synod Secretary of
+                      the Methodist Church Ghana, the Superintendent Minister of
+                      the Nsukwao Circuit, Koforidua, Member of the National Council,
+                      Scripture Union Ghana (S.U.), The Eastern Regional Chairman
+                      of the Scripture Union (S.U.) Ghana and a Jerusalem Pilgrim (JP) <br><br>
+                      As an Executive Director, is responsible for providing spiritual
+                      oversight of the entire operations of the “Elevation City’.
+                      The primary duties are as follows. <br>
+                      To prepare and keep an up-to-date
+                      report on all the spiritual undertakings of the ‘Elevation City’, <br>
+                      Offer direction as to the use of the facilities of 'Elevation City'. <br>
+                      Be well versed in new trends in Christian Education and worship. <br><br>
+                      He stands for fairness and justice and also believes in the Bible
+                      is a guide in our daily lives.
+                      Very Rev. Dennis Joseph Boadu’s Christian journey has been very
+                      eventful. He served as a chaplain for the Mfantsipim School
+                      (first Secondary School in 	Ghana) for ten years (1998-2008).
+                      A missionary to Italy, working with the Waldensian Evangelical
+                      Church in Rome and Bologna/Modena for five years (2009-2014).
+                      Synod Secretary for the Methodist Church from (2019-2023)
+                    </p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 py-2" id="cityinfo">
-              <div class="titles">
-                <h4>City Info</h4>
-              </div>
-              <div class="list-group">
-                <a href="intro.html" class="list-group-item list-group-item-action flex-column align-items-start">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">Introduction</h5>
-                  </div>
-                </a>
-                <a href="phases.html" class="list-group-item list-group-item-action flex-column align-items-start">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">Project Phases</h5>
-                  </div>
-                </a>
-                <a href="location.html" class="list-group-item list-group-item-action flex-column align-items-start">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">Location</h5>
-                  </div>
-                </a>
-              </div>
+          </div>
+          <div class="col-md-6 py-2" id="cityinfo">
+            <div class="titles">
+              <h4>City Info</h4>
+            </div>
+            <div class="list-group">
+              <a href="intro.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="my-2">Introduction</h5>
+                </div>
+              </a>
+              <a href="phases.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="my-2">Project Phases</h5>
+                </div>
+              </a>
+              <a href="location.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="my-2">Location</h5>
+                </div>
+              </a>
             </div>
           </div>
         </div>
