--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
             <div class="list-group">
               <a href="intro.html" class="list-group-item list-group-item-action flex-column align-items-start">
                 <div class="d-flex w-100 justify-content-between">
-                  <h5 class="my-2">Introduction</h5>
+                  <h5 class="my-2">Introduction</h5> <i class="fa fa-hourglass-start" aria-hidden="true"></i>
                 </div>
               </a>
               <a href="phases.html" class="list-group-item list-group-item-action flex-column align-items-start">
                 <div class="d-flex w-100 justify-content-between">
-                  <h5 class="my-2">Project Phases</h5>
+                  <h5 class="my-2">Project Phases</h5> <i class="fa fa-lightbulb-o" aria-hidden="true"></i>
                 </div>
               </a>
               <a href="location.html" class="list-group-item list-group-item-action flex-column align-items-start">
                 <div class="d-flex w-100 justify-content-between">
-                  <h5 class="my-2">Location</h5>
+                  <h5 class="my-2">Location</h5> <i class="fa fa-globe" aria-hidden="true"></i>
                 </div>
               </a>
             </div>
