--- a/location.html
+++ b/location.html
@@ -88,7 +88,7 @@
                component in the discussions of the History of Christianity in Ghana.
                By implication, the Elevation City will take advantage of this rich
                Christian heritage of Ghana as part of the activities which branches
-               off into three basic dimensions: PrayerCity; ReformationCity and AgedCity. <br><br>
+               off into three basic dimensions: Prayer Hub; Reformation Hub and Aged Hub. <br><br>
 
                Apart from this Christian heritage, there is also a sense of
                attraction in terms of tourism. Cape Coast is known for its tourist
