--- a/history.html
+++ b/history.html
@@ -150,6 +150,7 @@
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+              <img class="img-fluid" src="resources/images/logo2.png" width="120" alt="Image of Elevation Logo">
             </div>
           </div>
           <!-- Copyright -->
