--- a/team.html
+++ b/team.html
@@ -79,16 +79,14 @@
 
       <!-- Management Team -->
       <div class="container py-3">
-        <p class="lead ">The management team is made up of two different categories</p>
+        <p>The management team is made up of two different categories</p> <br><br>
         <h4 class="py-2">The 1st category consists of the following:</h4>
         <div id="accordion" role="tablist">
           <div class="card">
             <div class="card-header" role="tab" id="resource1">
-              <h3 class="py-2">
-                <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Executive Director
-                </a>
-              </h3>
+              <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <h3 class="py-2">Executive Director</h3>
+              </a>
             </div>
             <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="resource1">
               <div class="card-body">
@@ -239,6 +237,7 @@
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+              <img class="img-fluid" src="resources/images/logo2.png" width="120" alt="Image of Elevation Logo">
             </div>
           </div>
           <!-- Copyright -->
