--- a/team.html
+++ b/team.html
@@ -79,8 +79,8 @@
 
       <!-- Management Team -->
       <div class="container py-3">
-        <p>The management team is made up of two different categories</p> <br><br>
-        <h4 class="py-2">The 1st category consists of the following:</h4>
+        <p>The management team is made up of two different categories</p> <br>
+        <h5 class="py-2">The 1st category consists of the following:</h5>
         <div id="accordion" role="tablist">
           <div class="card">
             <div class="card-header" role="tab" id="resource1">
@@ -96,11 +96,9 @@
           </div>
           <div class="card">
             <div class="card-header" role="tab" id="resource2">
-              <h3 class="py-2">
-                <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Director of Administration
-                </a>
-              </h3>
+              <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <h3 class="py-2">Director of Administration</h3>
+              </a>
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="resources2">
               <div class="card-body">
@@ -110,11 +108,9 @@
           </div>
           <div class="card">
             <div class="card-header" role="tab" id="resource3">
-              <h3 class="py-2">
-                <a data-toggle="collapse" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                  Director of Finance
-                </a>
-              </h3>
+              <a data-toggle="collapse" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                <h3 class="py-2">Director of Finance</h3>
+              </a>
             </div>
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="resource3">
               <div class="card-body">
@@ -124,11 +120,9 @@
           </div>
           <div class="card">
             <div class="card-header" role="tab" id="resource4">
-              <h3 class="py-2">
-                <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                  Director, Prayer, Worship and Counselling
-                </a>
-              </h3>
+              <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                <h3 class="py-2">Director, Prayer, Worship and Counselling</h3>
+              </a>
             </div>
             <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="resource4">
               <div class="card-body">
@@ -138,11 +132,9 @@
           </div>
           <div class="card">
             <div class="card-header" role="tab" id="resource5">
-              <h3 class="py-2">
-                <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                  Director of Publications and Programmes
-                </a>
-              </h3>
+              <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                <h3 class="py-2">Director of Publications and Programmes</h3>
+              </a>
             </div>
             <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="resources5">
               <div class="card-body">
@@ -152,11 +144,9 @@
           </div>
           <div class="card">
             <div class="card-header" role="tab" id="resource6">
-              <h3 class="py-2">
-                <a data-toggle="collapse" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
-                  Director, Catering and Hospitality
-                </a>
-              </h3>
+              <a data-toggle="collapse" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                <h3 class="py-2">Director, Catering and Hospitality</h3>
+              </a>
             </div>
             <div id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="resource6">
               <div class="card-body">
@@ -166,11 +156,9 @@
           </div>
           <div class="card">
             <div class="card-header" role="tab" id="resource7">
-              <h3 class="py-2">
-                <a class="collapsed" data-toggle="collapse" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                  Director of Estate
-                </a>
-              </h3>
+              <a class="collapsed" data-toggle="collapse" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                <h3 class="py-2">Director of Estate</h3>
+              </a>
             </div>
             <div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="resource7">
               <div class="card-body">
@@ -180,11 +168,9 @@
           </div>
           <div class="card">
             <div class="card-header" role="tab" id="resource8">
-              <h3 class="py-2">
-                <a class="collapsed" data-toggle="collapse" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                  Director, Legal Affairs
-                </a>
-              </h3>
+              <a class="collapsed" data-toggle="collapse" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                <h3 class="py-2">Director, Legal Affairs</h3>
+              </a>
             </div>
             <div id="collapseEight" class="collapse" role="tabpanel" aria-labelledby="resource8">
               <div class="card-body">
@@ -193,20 +179,21 @@
             </div>
           </div>
         </div>
-        <br><br>
-        <h4>The 2nd category consists of the following:</h4>
-        <p class="lead font-weight-bold py-3">Board of Patrons and Patroness</p>
-        <p>This is a five-member board that serves
-        as the advisory team of the centre. The membership is composed of individuals
-        with clear understanding of the philosophy of the 'Elevation City.'
-        These include people of diverse interests and educational fields,
-        such as:
-        Police;
-        Church Leaders;
-        University Lecturers;
-        Architects; Sociologists;
-        Medical Practitioners;
-        Legal Practitioners and Psychologists.</p>
+          <br> <hr>
+          <h5>The 2nd category consists of the following:</h5>
+          <p class="lead font-weight-bold py-3">Board of Patrons and Patroness</p>
+          <p>This is a five-member board that serves
+          as the advisory team of the centre. The membership is composed of individuals
+          with clear understanding of the philosophy of the 'Elevation City.'
+          These include people of diverse interests and educational fields,
+          such as:
+          Police;
+          Church Leaders;
+          University Lecturers;
+          Architects; Sociologists;
+          Medical Practitioners;
+          Legal Practitioners and Psychologists.
+        </p>
       </div>
 
       <!-- Footer -->
