--- a/team.html
+++ b/team.html
@@ -81,7 +81,7 @@
       <div class="container py-3">
         <p>The management team is made up of two different categories</p> <br>
         <h5 class="py-2">The 1st category consists of the following:</h5>
-        <div id="accordion" role="tablist">
+        <div id="accordion" role="tablist" class="text-dark">
           <div class="card">
             <div class="card-header" role="tab" id="resource1">
               <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
