--- a/team.html
+++ b/team.html
@@ -81,11 +81,11 @@
       <div class="container py-3">
         <p>The management team is made up of two different categories</p> <br>
         <h5 class="py-2">The 1st category consists of the following:</h5>
-        <div id="accordion" role="tablist" class="text-dark">
+        <div id="accordion" role="tablist">
           <div class="card">
             <div class="card-header" role="tab" id="resource1">
               <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                <h3 class="py-2">Executive Director</h3>
+                <h4 class="py-2">Executive Director</h4>
               </a>
             </div>
             <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="resource1">
@@ -97,7 +97,7 @@
           <div class="card">
             <div class="card-header" role="tab" id="resource2">
               <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                <h3 class="py-2">Director of Administration</h3>
+                <h4 class="py-2">Director of Administration</h4>
               </a>
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="resources2">
@@ -109,7 +109,7 @@
           <div class="card">
             <div class="card-header" role="tab" id="resource3">
               <a data-toggle="collapse" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                <h3 class="py-2">Director of Finance</h3>
+                <h4 class="py-2">Director of Finance</h4>
               </a>
             </div>
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="resource3">
@@ -121,7 +121,7 @@
           <div class="card">
             <div class="card-header" role="tab" id="resource4">
               <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                <h3 class="py-2">Director, Prayer, Worship and Counselling</h3>
+                <h4 class="py-2">Director, Prayer, Worship and Counselling</h4>
               </a>
             </div>
             <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="resource4">
@@ -133,7 +133,7 @@
           <div class="card">
             <div class="card-header" role="tab" id="resource5">
               <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                <h3 class="py-2">Director of Publications and Programmes</h3>
+                <h4 class="py-2">Director of Publications and Programmes</h4>
               </a>
             </div>
             <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="resources5">
@@ -145,7 +145,7 @@
           <div class="card">
             <div class="card-header" role="tab" id="resource6">
               <a data-toggle="collapse" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
-                <h3 class="py-2">Director, Catering and Hospitality</h3>
+                <h4 class="py-2">Director, Catering and Hospitality</h4>
               </a>
             </div>
             <div id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="resource6">
@@ -157,7 +157,7 @@
           <div class="card">
             <div class="card-header" role="tab" id="resource7">
               <a class="collapsed" data-toggle="collapse" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                <h3 class="py-2">Director of Estate</h3>
+                <h4 class="py-2">Director of Estate</h4>
               </a>
             </div>
             <div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="resource7">
@@ -169,7 +169,7 @@
           <div class="card">
             <div class="card-header" role="tab" id="resource8">
               <a class="collapsed" data-toggle="collapse" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                <h3 class="py-2">Director, Legal Affairs</h3>
+                <h4 class="py-2">Director, Legal Affairs</h4>
               </a>
             </div>
             <div id="collapseEight" class="collapse" role="tabpanel" aria-labelledby="resource8">
