--- a/team.html
+++ b/team.html
@@ -79,8 +79,8 @@
 
       <!-- Management Team -->
       <div class="container py-3">
-        <p>The management team is made up of two different categories</p> <br>
-        <h5 class="py-2">The 1st category consists of the following:</h5>
+        <p>The management team is made up of two different categories</p>
+        <p class="py-2">The 1st category consists of the following:</p>
         <div id="accordion" role="tablist">
           <div class="card">
             <div class="card-header" role="tab" id="resource1">
@@ -180,7 +180,7 @@
           </div>
         </div>
           <br> <hr>
-          <h5>The 2nd category consists of the following:</h5>
+          <p>The 2nd category consists of the following:</p>
           <p class="lead font-weight-bold py-3">Board of Patrons and Patroness</p>
           <p>This is a five-member board that serves
           as the advisory team of the centre. The membership is composed of individuals
