--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="row container">
             <div class="col-md-7">
               <h1 class="font-weight-bold">Elevation City</h1>
-              <h3 class="lead font-weight-bold">To know Christ Jesus and make Him known to all...</h3>
+              <h3 class="lead laptop font-weight-bold">To know Christ Jesus and make Him known to all...</h3>
               <p class="pt-5"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
             </div>
           </div>
