--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
           <div class="col-md-6 py-2" id="cityinfo">
             <div class="titles">
-              <h4>City Info</h4>
+              <h4>The City's Overview</h4>
             </div>
             <div class="list-group">
               <a href="intro.html" class="list-group-item list-group-item-action flex-column align-items-start">
